src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedBundleClassType2/InvalidUnexpectedBundleClassType2.php
<?php

namespace Invalid\UnexpectedBundleClassType2;

/*
 * The class doesn't extend ClarolinePlugin
 */
class InvalidUnexpectedBundleClassType2 extends \DOMDocument
{

}